recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:7: error: identifier expected but ')' found.
  	avance(100.)
                   ^FourSquare:8: error: identifier expected but ')' found.
  	droite(90.)
                  ^