recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
}

def carre(){
  for (k <- 1 to 4)
  {
  	avance(100.)
  	droite(90.)
  }
  droite()
}